codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› 让 Codex 处理任何事情   " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"         剩余上下文 100%  " Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
