codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_full.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"› 让 Codex 处理任何事情                                                                                                 " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  ? 查看快捷键 · 计划模式 (shift+tab 切换模式)                                                         剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (18, " "), (20, " "), (22, " "), (24, " "), (38, " "), (40, " "), (42, " "), (44, " "), (104, " "), (106, " "), (108, " "), (110, " "), (112, " ")]
