codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› 让 Codex 处理任何事情                  "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  Plan mode (shift+tab to cycle)            "
